--- a/td2/mentions-legales-1.html
+++ b/td2/mentions-legales-1.html
@@ -3,27 +3,26 @@
 	<head>
 		<title>Mention Légale</title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="mentions-legales.css">
 	</head>
 	<body>
 		<h2>Mentions légales</h2>
-
-		<h3>Édition du site</h3>
+		<h3 id="Édition du site">Édition du site</h3>
 			<p>Ce site (MaBoutique.fr) est édité par la société WEBAGENCY, SARL (société à responsabilité limitée) immatriculée au
 			Registre du Commerce et des Sociétés de Caen sous le numéro RCS CAEN XXX YYY ZZZ, numéro de TVA Intra FR00501000000.</p>
 			<p>Coordonnées : <strong>WebAgency</strong> SARL - 11 rue vide - 14000 Caen</p>
-		<h3>Hébergement</h3>
+		<h3 id="Hébergement">Hébergement</h3>
 			<p>Ce site est hébergé par la société <strong>ONLINE SAS</strong>, SAS (société par actions simplifiées) au capital de 214 410,50
 			Euros, filiale du groupe Iliad, immatriculée au Registre du Commerce et des Sociétés de Paris sous le
 			numéro RCS PARIS B 433 115 904, numéro de TVA FR35433115904.</p>
 			<p>Coordonnées : <strong>Online SAS</strong> - BP 438 - 75366 Paris Cedex 08</p>
-		<h3>Confidentialité</h3>
+		<h3 id="Confidentialité">Confidentialité</h3>
 			<p>Ce site ne collecte aucune donnée nominative à votre insu.</p>
 			<p>Comme la plupart des sites, nous collectons cependant des données relatives à la navigation de nos
 			visiteurs, afin d'obtenir des statistiques précises liées à l'utilisation de ce service. Ces données incluent votre
 			adresse IP, votre fournisseur d'accès à internet, le navigateur utilisé, ou encore l'heure de vos visites.</p>
 			<p>Si vous avez une question à propos de notre politique de confidentialité, merci de nous contacter par <a href="">email</a></p>
-		<h3>Cookies</h3>
+		<h3 id="Cookies">Cookies</h3>
 			<p>Un cookie est un fichier texte déposé, sous réserve de vos choix, sur votre ordinateur lors de la visite d'un site
 			ou de la consultation d'une publicité. Il a pour but de collecter des informations relatives à votre navigation
 			et de vous adresser des services adaptés à votre terminal (ordinateur, mobile ou tablette).</p>
@@ -55,7 +54,7 @@
 			naviguez sur notre site. Ces cookies servent principalement à améliorer notre site en fonction du nombre de
 			visiteurs.</p>
 			<p>Vous pouvez gérer ces cookies via le lien suivant : <a href="support.google.com">support.google.com</a></p>
-		<h3>Données cartographiques</h3>
+		<h3 id="Données">Données cartographiques</h3>
 			<p>Les cartes présentes sur ce site sont créées à partir des données © contributeurs OpenStreetMap, publiées
 			sous licence <a href="https://opendatacommons.org/licenses/odbl/1-0/">ODBL</a></p>
 	</body>
